Fixed position of radio buttons and the alignment of inputs

--- a/VDMS/Content/Site.css
+++ b/VDMS/Content/Site.css
@@ -59,7 +59,9 @@ textarea {
 
 
 }
-
+#vdf-radio {
+	margin-top:7px;
+}
 
 select{
  border-radius: 3px !important;
